--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
           
     - name: Restore dependencies
       run: dotnet restore 
-      
+      working-directory: ./src
+
     - name: Build
       run: dotnet build --no-restore 
       working-directory: ./src
